Updated Force India

--- a/Notebooks/last_five_years_results.ipynb
+++ b/Notebooks/last_five_years_results.ipynb
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "9b1d3fc1",
+   "id": "4db454c7",
    "metadata": {},
    "outputs": [
     {
@@ -550,8 +550,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "2fc26fed",
+   "execution_count": 30,
+   "id": "913e9ed5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,7 +563,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "e19781c0",
+   "id": "3b67f14e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -577,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "30d30761",
+   "id": "b5b19b81",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,7 +588,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "5a391275",
+   "id": "d809b904",
    "metadata": {},
    "outputs": [
     {
@@ -1097,7 +1097,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "27cacd66",
+   "id": "91934c41",
    "metadata": {},
    "outputs": [
     {
@@ -1450,6 +1450,8 @@
     }
    ],
    "source": [
+    "last_five_years_results_df[\"Team\"] = last_five_years_results_df[\"Team\"].replace('Force India Mercedes','Aston Martin')\n",
+    "last_five_years_results_df[\"Team\"] = last_five_years_results_df[\"Team\"].replace('','Aston Martin')\n",
     "last_five_years_results_df[\"Team\"] = last_five_years_results_df[\"Team\"].replace('Renault','Alpine')\n",
     "last_five_years_results_df[\"Team\"] = last_five_years_results_df[\"Team\"].replace('Sauber Ferrari','Alfa Romeo Racing Ferrari')\n",
     "last_five_years_results_df[\"Team\"] = last_five_years_results_df[\"Team\"].replace('Scuderia Toro Rosso Honda','AlphaTauri Honda')\n",
@@ -1461,7 +1463,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "c9fac342",
+   "id": "f14325ba",
    "metadata": {},
    "outputs": [],
    "source": [
