File name changed

--- a/Notebooks/ML_NoSQL.ipynb
+++ b/Notebooks/ML_NoSQL.ipynb
@@ -36,6 +36,7 @@
     "from   colorama                import Back             as bk\n",
     "from   sklearn.model_selection import train_test_split as tts\n",
     "from   sklearn.preprocessing   import StandardScaler   as sts\n",
+    "from   sklearn.linear_model      import LinearRegression\n",
     "from   tensorflow              import keras            as ker\n",
     "from   keras.models            import Sequential       as seq\n",
     "from   keras.layers            import Dense            as den\n",
