--- a/Notebooks/ML_Complex_API.ipynb
+++ b/Notebooks/ML_Complex_API.ipynb
@@ -2506,12 +2506,12 @@
      "output_type": "stream",
      "text": [
       "    proba_0  proba_1  actual  predicted\n",
-      "0      0.14     0.86       1          1\n",
-      "1      0.82     0.18       0          0\n",
-      "2      0.93     0.07       0          0\n",
-      "3      0.97     0.03       0          0\n",
+      "0      0.21     0.79       1          1\n",
+      "1      0.76     0.24       0          0\n",
+      "2      0.95     0.05       0          0\n",
+      "3      0.99     0.01       0          0\n",
       "4      0.99     0.01       0          0\n",
-      "5      0.99     0.01       0          0\n",
+      "5      1.00     0.00       0          0\n",
       "6      1.00     0.00       0          0\n",
       "7      1.00     0.00       0          0\n",
       "8      1.00     0.00       0          0\n",
@@ -2565,7 +2565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -2592,24 +2592,16 @@
       "16  0.706879  0.293121       0          0\n",
       "17  0.706879  0.293121       0          0\n",
       "18  0.706880  0.293120       0          0\n",
-      "19  0.706880  0.293120       1          0\n"
+      "19  0.706880  0.293120       1          0\n",
+      "                 precision    recall  f1-score   support\n",
+      "\n",
+      "        leclerc       0.95      1.00      0.97       406\n",
+      "\n",
+      "      micro avg       0.95      1.00      0.97       406\n",
+      "      macro avg       0.95      1.00      0.97       406\n",
+      "   weighted avg       0.95      1.00      0.97       406\n",
+      "\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "model\n",
-       "linear_regression            0.000000\n",
-       "logistic_regression          0.636364\n",
-       "neural_network_classifier    0.818182\n",
-       "random_forest_classifier     1.000000\n",
-       "random_forest_regressor      0.000000\n",
-       "Name: score, dtype: float64"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -2633,7 +2625,23 @@
     "            comparison_dict['params'].append(model_params)\n",
     "            comparison_dict['score'].append(model_score) \n",
     "print(model_prediction.head(50))\n",
-    "pd.DataFrame(comparison_dict).groupby('model')['score'].max()"
+    "pd.DataFrame(comparison_dict).groupby('model')['score'].max()\n",
+    "\n",
+    "predictions = model.predict(X_train)\n",
+    "target_names = df.driver\n",
+    "# Print the predictions\n",
+    "newpred = np.zeros(len(predictions))\n",
+    "for i in range(len(predictions)):\n",
+    "  newpred[i] = predictions[i]\n",
+    "p  = np.nan_to_num(newpred)\n",
+    "j = 0\n",
+    "for i in p:\n",
+    "    i = i * 100\n",
+    "    i = int(i)\n",
+    "    p[j] = i\n",
+    "    j = j + 1\n",
+    "y  = np.nan_to_num(y_train) \n",
+    "print(classification_report(y, p, target_names = target_names,labels=np.unique(p)))"
    ]
   }
  ],
