--- a/Notebooks/ML_Complex_API.ipynb
+++ b/Notebooks/ML_Complex_API.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas   as pd\n",
-    "import numpy    as np\n",
+    "import pandas                  as pd\n",
+    "import numpy                   as np\n",
     "import requests\n",
     "import bs4\n",
     "import warnings                as warn\n",
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
        "4  http://en.wikipedia.org/wiki/2022_Miami_Grand_...  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +431,7 @@
        "4        haas     7  5868338.0  Finished      10       5  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -876,7 +876,7 @@
        "66                   8.0  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -887,12 +887,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Constructor Standings DF\n",
-    "constructor_rounds = rounds\n",
+    "constructor_rounds    = rounds\n",
     "constructor_standings = {'season'          : [], 'round'                    : [],\n",
     "                         'constructor'     : [], 'constructor_points'       : [],\n",
     "                         'constructor_wins': [], 'constructor_standings_pos': []}\n",
@@ -939,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1037,7 +1037,7 @@
        "4                        0.0  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1048,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1091,7 +1091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1189,7 +1189,7 @@
        "4      1  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1200,7 +1200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1266,7 +1266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1382,7 +1382,7 @@
        "4             0             0            0            0               1  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1393,7 +1393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1411,7 +1411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1602,7 +1602,7 @@
        "4                        0.0                7  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1613,7 +1613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1626,7 +1626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1640,7 +1640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1825,7 +1825,7 @@
        "4                          0                7          29  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1836,7 +1836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1849,7 +1849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1872,13 +1872,12 @@
     "        prediction_df['predicted'] = prediction_df.predicted.map(lambda x: 1 if x == 0 else 0)\n",
     "        score += precision_score(prediction_df.actual, prediction_df.predicted)\n",
     "    model_score = score / df['round'].unique().max()\n",
-    "    #print(prediction_df.head(20))\n",
     "    return model_score, prediction_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1900,13 +1899,12 @@
     "        prediction_df['predicted'] = prediction_df.predicted.map(lambda x: 1 if x == 0 else 0)\n",
     "        score += precision_score(prediction_df.actual, prediction_df.predicted)\n",
     "    model_score = score / df['round'].unique().max()\n",
-    "    #print(prediction_df.head(20))\n",
     "    return model_score, prediction_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1915,7 +1913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -2100,7 +2098,7 @@
        "2                           0              4.0          37  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2111,7 +2109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2128,7 +2126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -2269,7 +2267,7 @@
        "2                           0          37  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2280,7 +2278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2290,72 +2288,11 @@
     "df        = df.drop(['nationality'], axis = 1)\n",
     "df        = df.drop(['constructor'], axis = 1)\n",
     "df.podium = df.podium.map(lambda x: 1 if x == 1 else 0)\n",
-    "train   = df[df.season <2023]\n",
-    "X_train = train.drop(['driver', 'podium'], axis = 1)\n",
-    "y_train = train.podium\n",
-    "scaler  = StandardScaler()\n",
-    "X_train = pd.DataFrame(scaler.fit_transform(X_train), columns = X_train.columns)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "     results  podium  actual  predicted\n",
-      "0  -0.138519       0       0          1\n",
-      "1  -0.105799       0       0          0\n",
-      "2  -0.101240       0       0          0\n",
-      "3  -0.096330       0       0          0\n",
-      "4  -0.095623       0       0          0\n",
-      "5  -0.090008       0       0          0\n",
-      "6  -0.082747       0       0          0\n",
-      "7  -0.075705       0       0          0\n",
-      "8  -0.062759       0       0          0\n",
-      "9  -0.049487       0       0          0\n",
-      "10 -0.045711       0       0          0\n",
-      "11 -0.044659       0       0          0\n",
-      "12 -0.038258       0       0          0\n",
-      "13 -0.032537       0       0          0\n",
-      "14 -0.026949       0       0          0\n",
-      "15 -0.023037       0       0          0\n",
-      "16  0.011271       0       0          0\n",
-      "17  0.071860       0       0          0\n",
-      "18  0.113625       0       0          0\n",
-      "19  0.857133       1       1          0\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "model\n",
-       "linear_regression    0.0\n",
-       "Name: score, dtype: float64"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Linear Regression\n",
-    "comparison_dict = {'model': [], 'params': [], 'score': []}\n",
-    "params={'fit_intercept': [True, False]}\n",
-    "for fit_intercept in params['fit_intercept']:\n",
-    "    model_params = (fit_intercept)\n",
-    "    model = LinearRegression(fit_intercept = fit_intercept)\n",
-    "    model.fit(X_train, y_train)   \n",
-    "    model_score, model_prediction = score_regression(model)\n",
-    "    comparison_dict['model'].append('linear_regression')\n",
-    "    comparison_dict['params'].append(model_params)\n",
-    "    comparison_dict['score'].append(model_score)\n",
-    "print(model_prediction)\n",
-    "pd.DataFrame(comparison_dict).groupby('model')['score'].max()  "
+    "train     = df[df.season <2023]\n",
+    "X_train   = train.drop(['driver', 'podium'], axis = 1)\n",
+    "y_train   = train.podium\n",
+    "scaler    = StandardScaler()\n",
+    "X_train   = pd.DataFrame(scaler.fit_transform(X_train), columns = X_train.columns)"
    ]
   },
   {
@@ -2394,12 +2331,73 @@
      "data": {
       "text/plain": [
        "model\n",
+       "linear_regression    0.0\n",
+       "Name: score, dtype: float64"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Linear Regression\n",
+    "comparison_dict = {'model': [], 'params': [], 'score': []}\n",
+    "params={'fit_intercept': [True, False]}\n",
+    "for fit_intercept in params['fit_intercept']:\n",
+    "    model_params = (fit_intercept)\n",
+    "    model = LinearRegression(fit_intercept = fit_intercept)\n",
+    "    model.fit(X_train, y_train)   \n",
+    "    model_score, model_prediction = score_regression(model)\n",
+    "    comparison_dict['model'].append('linear_regression')\n",
+    "    comparison_dict['params'].append(model_params)\n",
+    "    comparison_dict['score'].append(model_score)\n",
+    "print(model_prediction)\n",
+    "pd.DataFrame(comparison_dict).groupby('model')['score'].max()  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     results  podium  actual  predicted\n",
+      "0  -0.138519       0       0          1\n",
+      "1  -0.105799       0       0          0\n",
+      "2  -0.101240       0       0          0\n",
+      "3  -0.096330       0       0          0\n",
+      "4  -0.095623       0       0          0\n",
+      "5  -0.090008       0       0          0\n",
+      "6  -0.082747       0       0          0\n",
+      "7  -0.075705       0       0          0\n",
+      "8  -0.062759       0       0          0\n",
+      "9  -0.049487       0       0          0\n",
+      "10 -0.045711       0       0          0\n",
+      "11 -0.044659       0       0          0\n",
+      "12 -0.038258       0       0          0\n",
+      "13 -0.032537       0       0          0\n",
+      "14 -0.026949       0       0          0\n",
+      "15 -0.023037       0       0          0\n",
+      "16  0.011271       0       0          0\n",
+      "17  0.071860       0       0          0\n",
+      "18  0.113625       0       0          0\n",
+      "19  0.857133       1       1          0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "model\n",
        "linear_regression          0.0\n",
        "random_forest_regressor    0.0\n",
        "Name: score, dtype: float64"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2428,7 +2426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -2468,20 +2466,16 @@
        "Name: score, dtype: float64"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Logistic Regression\n",
-    "#comparison_dict ={'model':[], \n",
-    "#                  'params': [],\n",
-    "#                  'score': []}\n",
-    "# Logistic Regression\n",
     "params={'penalty': ['l1', 'l2'],\n",
-    "        'solver': ['saga', 'liblinear'],\n",
-    "        'C': np.logspace(-3,1,20)}\n",
+    "        'solver' : ['saga', 'liblinear'],\n",
+    "        'C'      : np.logspace(-3,1,20)}\n",
     "for penalty in params['penalty']:\n",
     "    for solver in params['solver']:\n",
     "        for c in params['C']:\n",
@@ -2498,7 +2492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2506,12 +2500,12 @@
      "output_type": "stream",
      "text": [
       "    proba_0  proba_1  actual  predicted\n",
-      "0      0.21     0.79       1          1\n",
-      "1      0.76     0.24       0          0\n",
-      "2      0.95     0.05       0          0\n",
+      "0      0.13     0.87       1          1\n",
+      "1      0.81     0.19       0          0\n",
+      "2      0.92     0.08       0          0\n",
       "3      0.99     0.01       0          0\n",
       "4      0.99     0.01       0          0\n",
-      "5      1.00     0.00       0          0\n",
+      "5      0.99     0.01       0          0\n",
       "6      1.00     0.00       0          0\n",
       "7      1.00     0.00       0          0\n",
       "8      1.00     0.00       0          0\n",
@@ -2539,16 +2533,16 @@
        "Name: score, dtype: float64"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Random Forest Classifier\n",
-    "params={'criterion': ['gini', 'entropy'],\n",
+    "params={'criterion'   : ['gini', 'entropy'],\n",
     "        'max_features': [None],\n",
-    "        'max_depth': list([None])}\n",
+    "        'max_depth'   : list([None])}\n",
     "for criterion in params['criterion']:\n",
     "    for max_features in params['max_features']:\n",
     "        for max_depth in params['max_depth']:\n",
@@ -2565,7 +2559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -2593,6 +2587,13 @@
       "17  0.706879  0.293121       0          0\n",
       "18  0.706880  0.293120       0          0\n",
       "19  0.706880  0.293120       1          0\n",
+      "model\n",
+      "linear_regression            0.000000\n",
+      "logistic_regression          0.636364\n",
+      "neural_network_classifier    0.818182\n",
+      "random_forest_classifier     1.000000\n",
+      "random_forest_regressor      0.000000\n",
+      "Name: score, dtype: float64\n",
       "                 precision    recall  f1-score   support\n",
       "\n",
       "        leclerc       0.95      1.00      0.97       406\n",
@@ -2625,7 +2626,7 @@
     "            comparison_dict['params'].append(model_params)\n",
     "            comparison_dict['score'].append(model_score) \n",
     "print(model_prediction.head(50))\n",
-    "pd.DataFrame(comparison_dict).groupby('model')['score'].max()\n",
+    "print(pd.DataFrame(comparison_dict).groupby('model')['score'].max())\n",
     "\n",
     "predictions = model.predict(X_train)\n",
     "target_names = df.driver\n",
